<resources>
    <string name="app_name">BaseDatosCarnet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alumno_menu">AlumnoMenuActivity</string>
    <string name="title_activity_nota_menu">NotaMenuActivity</string>
    <string name="title_activity_materia_menu">MateriaMenuActivity</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertarActivity</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminarActivity</string>
    <string name="title_activity_alumno_actualizar">AlumnoActualizarActivity</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultarActivity</string>
    <string name="title_activity_nota_insertar">NotaInsertarActivity</string>
    <string name="title_activity_nota_eliminar">NotaEliminarActivity</string>
    <string name="title_activity_nota_actualizar">NotaActualizarActivity</string>
    <string name="title_activity_nota_consultar">NotaConsultarActivity</string>
    <string name="title_activity_materia_insertar">MateriaInsertarActivity</string>
    <string name="title_activity_materia_eliminar">MateriaEliminarActivity</string>
    <string name="title_activity_materia_actualizar">MateriaActualizarActivity</string>
    <string name="title_activity_materia_consultar">MateriaConsultarActivity</string>
    <string name="alumno_menu">Función a Ejecutar Alumno</string>
    <string name="nota_menu">Función a Ejecutar Nota</string>
    <string name="materia_menu">Función a Ejecutar Materia</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="carnet">Carnet</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="matganadas">Materias Ganadas</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="ciclo">Ciclo</string>
    <string name="notafinal">Nota Final</string>
    <string name="codmateria">Codigo</string>
    <string name="unidadesval">Unidades Valorativas</string>
    <string name="limpiar">Limpiar</string>
    <string name="codmatnota">Codigo Materia</string>
    <string name="nommateria">Nombre Materia</string>
    <string name="opciones">Opciones:</string>

    <string name="title_activity_consultas_menu">ConsultasMenuActivity</string>
    <string name="title_activity_consulta1">Consulta1Activity</string>
    <string name="matinscritas">Materias Inscritas</string>
    <string name="title_activity_consulta2">Consulta2Activity</string>
    <string name="total1">_Suma______</string>
    <string name="total2">____Max_____</string>
    <string name="total3">_______Min____</string>
    <string name="total4">Total Conteo</string>
    <string name="title_activity_consulta3">Consulta3Activity</string>
    <string name="titulochequeos">Criterios</string>
    <string name="opcion1">unidad</string>
    <string name="opcion2">unidad</string>
    <string name="text1">UCB</string>
    <string name="text2">otras</string>
    <string name="title_activity_lista_materias">ListaMateriasActivity</string>
    <string name="title_activity_consulta4">Consulta4Activity</string>
    <string name="selecc_materia">Seleccione el Codigo de Materia</string>

</resources>
